Update index.html to add task priority selector

--- a/index.html
+++ b/index.html
@@ -1,245 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative To-Do List</title>
-    <style>
-        /* Your existing styles */
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        body::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 200%;
-            height: 200%;
-            background: linear-gradient(45deg, #6a11cb, #2575fc, #ff9a9e, #a1c4fd, #c2e59c);
-            background-size: 400% 400%;
-            animation: gradientMove 20s infinite;
-            z-index: -1;
-        }
-
-        @keyframes gradientMove {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-
-        .container {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
-            width: 90%;
-            max-width: 500px;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 10px;
-        }
-
-        #time {
-            text-align: center;
-            margin-bottom: 20px;
-            font-size: 1.2rem;
-        }
-
-        .task-input {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-
-        .task-input input[type="text"] {
-            flex-grow: 1;
-            padding: 10px;
-            border-radius: 5px;
-            border: none;
-            outline: none;
-        }
-
-        .task-input input[type="datetime-local"] {
-            padding: 10px;
-            border-radius: 5px;
-            border: none;
-            outline: none;
-        }
-
-        .task-input button {
-            padding: 10px;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-            background: #2575fc;
-            color: #fff;
-            font-weight: bold;
-        }
-
-        .task-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .task-list li {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: rgba(255, 255, 255, 0.2);
-            margin-bottom: 10px;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        .task-list li.completed {
-            text-decoration: line-through;
-            opacity: 0.6;
-        }
-
-        .buttons {
-            display: flex;
-            gap: 10px;
-        }
-
-        .history {
-            margin-top: 20px;
-            font-size: 0.9rem;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>To-Do List</h1>
-        <div id="time"></div>
-
-        <div class="task-input">
-            <input type="text" id="task" placeholder="Add a new task...">
-            <input type="datetime-local" id="reminder-time">
-            <button onclick="addTask()">Add</button>
-        </div>
-
-        <ul id="task-list" class="task-list"></ul>
-
-        <div class="history">
-            <strong>History:</strong>
-            <p id="completed-tasks">Completed: 0</p>
-            <p id="incomplete-tasks">Incomplete: 0</p>
-        </div>
-    </div>
-
-    <!-- Audio element for reminder sound -->
-    <audio id="reminder-sound" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
-
-    <script>
-        const timeElement = document.getElementById('time');
-        const taskList = document.getElementById('task-list');
-        const completedTasks = document.getElementById('completed-tasks');
-        const incompleteTasks = document.getElementById('incomplete-tasks');
-        const reminderSound = document.getElementById('reminder-sound');
-
-        const reminders = [];
-        let completedCount = 0;
-        let incompleteCount = 0;
-
-        function updateTime() {
-            const now = new Date();
-            timeElement.textContent = now.toLocaleString();
-        }
-
-        setInterval(updateTime, 1000);
-
-        function addTask() {
-            const taskInput = document.getElementById('task');
-            const reminderInput = document.getElementById('reminder-time');
-            const taskText = taskInput.value.trim();
-            const reminderTime = reminderInput.value;
-
-            if (taskText === '') return;
-
-            const listItem = document.createElement('li');
-            listItem.innerHTML = `
-                <span>${taskText}</span>
-                <div class="buttons">
-                    <button onclick="completeTask(this)">Complete</button>
-                    <button onclick="deleteTask(this)">Delete</button>
-                </div>
-            `;
-
-            if (reminderTime) {
-                const reminderTimestamp = new Date(reminderTime).getTime();
-                reminders.push({ taskText, timestamp: reminderTimestamp, element: listItem });
-            }
-
-            taskList.appendChild(listItem);
-            taskInput.value = '';
-            reminderInput.value = '';
-
-            incompleteCount++;
-            updateHistory();
-        }
-
-        function completeTask(button) {
-            const listItem = button.parentElement.parentElement;
-            if (!listItem.classList.contains('completed')) {
-                listItem.classList.add('completed');
-                completedCount++;
-                incompleteCount--;
-                updateHistory();
-            }
-        }
-
-        function deleteTask(button) {
-            const listItem = button.parentElement.parentElement;
-            if (!listItem.classList.contains('completed')) {
-                incompleteCount--;
-            } else {
-                completedCount--;
-            }
-
-            taskList.removeChild(listItem);
-            updateHistory();
-        }
-
-        function updateHistory() {
-            completedTasks.textContent = `Completed: ${completedCount}`;
-            incompleteTasks.textContent = `Incomplete: ${incompleteCount}`;
-        }
-
-        function checkReminders() {
-            const now = Date.now();
-
-            reminders.forEach((reminder, index) => {
-                if (reminder.timestamp <= now) {
-                    reminderSound.play(); // Play the reminder sound
-                    alert(`Reminder: ${reminder.taskText}`);
-                    reminders.splice(index, 1); // Remove triggered reminder
-                }
-            });
-        }
-
-        setInterval(checkReminders, 1000); // Check every second
-
-        updateTime();
-    </script>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>To-do List</title>\n    <style>\n        .priority-high { color: red; }\n        .priority-medium { color: orange; }\n        .priority-low { color: green; }\n    </style>\n</head>\n<body>\n    <h1>My To-Do List</h1>\n    <input type="text" id="taskInput" placeholder="Add a new task">\n    <select id="prioritySelector">\n        <option value="low">Low</option>\n        <option value="medium">Medium</option>\n        <option value="high">High</option>\n    </select>\n    <button onclick="addTask()">Add</button>\n    <ul id="taskList"></ul>\n    <script>\n        function addTask() {\n            const taskInput = document.getElementById('taskInput');\n            const prioritySelector = document.getElementById('prioritySelector');\n            const taskList = document.getElementById('taskList');\n            const taskText = taskInput.value;\n            const priority = prioritySelector.value;\n            if (taskText === '') return;\n            const newTask = document.createElement('li');\n            newTask.textContent = taskText;\n            newTask.classList.add('priority-' + priority);\n            taskList.appendChild(newTask);\n            taskInput.value = '';\n            prioritySelector.value = 'low';\n        }\n    <\/script>\n</body>\n</html>
